2015-06-23  Ludovic Courtès  <ludo@gnu.org>

	PR 65711
	* config/arm/linux-elf.h (LINUX_TARGET_LINK_SPEC): Move
	'-dynamic-linker' within %{!shared: ...}.

2015-06-22  Vladimir Makarov  <vmakarov@redhat.com>

	PR bootstrap/63740
	* lra-lives.c (process_bb_lives): Check insn copying the same
	reload pseudo and don't create a copy for it.

2015-06-22  Richard Biener  <rguenther@suse.de>

	Backport from mainline
	2015-06-08  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/66422
	* tree-ssa-loop-ivcanon.c (remove_exits_and_undefined_stmts): Split
	block after inserted gcc_unreachable.

2015-06-21  Marek Polacek  <polacek@redhat.com>

	Backport from mainline
	2015-06-20  Marek Polacek  <polacek@redhat.com>

	* common.opt (fsanitize-undefined-trap-on-error): Add Driver.

2015-06-18  Richard Biener  <rguenther@suse.de>

	Backport from mainline
	2015-06-03  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/66375
	* tree-scalar-evolution.c (follow_ssa_edge_binary): First
	add to the evolution before following SSA edges.

2015-06-18  Venkataramanan Kumar  <venkataramanan.kumar@amd.com>

	Backport from mainline r224414.
	2015-06-12  Venkataramanan Kumar  <venkataramanan.kumar@amd.com>

	* common/config/i386/i386-common.c
	(OPTION_MASK_ISA_MWAITX_SET): New.
	(ix86_handle_option): Handle mwaitx.
	* config.gcc (i[34567]86-*-*): Add mwaitxintrin.h,
	(x86_64-*-*): Likewise.
	* config/i386/mwaitxintrin.h: New header.
	* config/i386/cpuid.h (bit_MWAITX):  Define.
	 * config/i386/driver-i386.c (host_detect_local_cpu): Detect
	MWAITX support.
	 * config/i386/i386.opt (mwaitx): New.
	* config/i386/i386-builtin-types.def
	(VOID_FTYPE_UNSIGNED_ UNSIGNED_UNSIGNED): New function type.
	* config/i386/i386-c.c: Define __MWAITX__ if needed.
	* config/i386/i386.c (ix86_target_string): Define -mmwaitx option.
	(PTA_MWAITX): New.
	(ix86_option_override_internal): Handle new option.
	(processor_alias_table): Added PTA_MWAITX.